--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -22,7 +22,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/login_to_your_account"
-            android:textSize="20dp"
+            android:textSize="20sp"
             android:textStyle="bold"
             android:layout_marginTop="8dp"
             android:gravity="center_horizontal"/>
@@ -33,16 +33,19 @@
         android:id="@+id/editTextEmail"
         android:layout_width="match_parent"
         android:layout_height="48dp"
-        android:hint="Email"
+        android:hint="@string/email"
         android:clickable="true"
+        android:focusable="true"
         android:inputType="textEmailAddress"/>
         <EditText
             android:id="@+id/editTextPassword"
             android:layout_marginTop="32dp"
             android:layout_width="match_parent"
             android:layout_height="48dp"
-            android:hint="Password"
+            android:autofillHints="password"
+            android:hint="@string/password"
             android:clickable="true"
+            android:focusable="true"
             android:inputType="textPassword"/>
 
         <Button
@@ -51,8 +54,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:background="@drawable/bg_login"
-            android:text="LOGIN"
-            android:textSize="16dp"/>
+            android:text="@string/login"
+            android:textSize="16sp"/>
 
         <TextView
             android:layout_marginTop="16dp"
@@ -97,27 +100,27 @@
                     android:layout_marginTop="32sp">
 
                     <ImageView
-                        android:id="@+id/imageView3"
-                        android:layout_width="160px"
-                        android:layout_height="160px"
+                        android:id="@+id/imageFacebook"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
                         android:layout_marginEnd="28dp"
-                        android:src="@drawable/img_google"
-                        app:layout_constraintEnd_toStartOf="@+id/imageView2"
+                        android:src="@drawable/img_facebook"
+                        app:layout_constraintEnd_toStartOf="@+id/imageGoogle"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:id="@+id/imageView4"
-                        android:layout_width="160px"
-                        android:layout_height="160px"
+                        android:id="@+id/imageTwitter"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
                         android:layout_marginStart="28dp"
-                        android:src="@drawable/img_google"
-                        app:layout_constraintStart_toEndOf="@+id/imageView2"
+                        android:src="@drawable/img_twitter"
+                        app:layout_constraintStart_toEndOf="@+id/imageGoogle"
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <ImageView
-                        android:id="@+id/imageView2"
-                        android:layout_width="160px"
-                        android:layout_height="160px"
+                        android:id="@+id/imageGoogle"
+                        android:layout_width="64dp"
+                        android:layout_height="64dp"
                         android:src="@drawable/img_google"
                         app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent"
